# kangabase

./: .gitignore  README.md  TRY_IT.md  __init__.py  agent.py  pyproject.toml  quickstart.sh
cli/: __init__.py  main.py
core/: __init__.py  audit.py  contract.py  database.py  events.py  intent.py  policy.py  sandbox.py  schema.py
docs/: DESIGN.md  GUIDE.md
examples/coupon/: README.md  demo.py
examples/coupon/contracts/: coupon_ops.yaml
examples/coupon/policies/: permissions.yaml
examples/coupon/schemas/: coupon.yaml
migrations/: __init__.py  manager.py
nl/: __init__.py  parser.py
tests/: __init__.py  test_audit.py  test_contract.py  test_database.py  test_e2e_coupon.py  test_intent.py  test_policy.py  test_sandbox.py  test_schema.py
web/: app.py
web/routes/: agents.py  audit.py  contracts.py  dashboard.py  explorer.py  schemas.py  settings.py
web/static/: app.js  style.css
web/templates/: agents.html  audit.html  base.html  contracts.html  dashboard.html  explorer.html  schemas.html  settings.html
web/templates/partials/: audit_detail.html  execute_result.html  query_result.html  schema_detail.html  table_data.html
